# power-generation-etl

./: .dockerignore  .env.template  .gitignore  DATABASE_CLI.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/actions/resolve-window/: action.yml
.github/workflows/: ci.yml  monthly-extraction.yml
docs/: DATA_UNITS.md  INFRASTRUCTURE.md
schema/: chile_generation.sql  eia_generation.sql  eia_generator_info.sql  entsoe_generation.sql  extraction_metadata.sql  gcpt_coal_metadata.sql  materialized_views.sql  npp_generation.sql  occto_generation.sql  oe_facility_generation.sql  oe_generation.sql  ons_generation.sql  row_count_views.sql
schema/migrations/: 001_add_unique_constraints.sql  001a_dedup_and_constrain_small_tables.sql  001b_dedup_and_constrain_ons.sql
src/: backfill_extraction_dates.py  check_crosswalk_drift.py  database.py  database_management.py  get_latest_date.py  incremental_extract.py  refresh_views.py  validator.py
tests/: test_incremental_extract.py  test_validator.py
