[project]
name = "template-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "ruff>=0.14.8",
    "tqdm>=4.67.1",
]
