[project]
name = "template-repository"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.25",
    "tenacity>=8.2.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "iprogress>=0.4",
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
    "pytest>=8.0.0",
    "ruff>=0.14.8",
]
